...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/route_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="150dp"
...
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Run:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/run_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/run_label"
                    android:textSize="20sp" />
            </RelativeLayout>

...
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Surface:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/surface_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/surface_label"
                    android:textSize="20sp" />
            </RelativeLayout>

...
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Road:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/road_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/road_label"
                    android:textSize="20sp" />
            </RelativeLayout>

...
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Condition:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/condition_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/condition_label"
                    android:textSize="20sp" />
            </RelativeLayout>

...
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Difficulty:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/difficulty_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/difficulty_label"
                    android:textSize="20sp" />
            </RelativeLayout>

...
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Favorite:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/favorite_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/favorite_label"
                    android:textSize="20sp" />
            </RelativeLayout>

...
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="Note:"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/note_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:lines="4"
                android:textSize="20sp" />

            <Button
...
